# mangrove-agent

./: .gitignore  .mcp.json.example  CLAUDE.md  CONTRIBUTING.md  README.md  SETUP.md  docker-compose.yml  start.sh  stop.sh
server/: Dockerfile  pyproject.toml  requirements.txt
server/scripts/: agent_pay_hello_mangrove_mcp.py
server/src/: app.py  config.py
server/src/api/: router.py
server/src/config/: configuration-keys.json  dev-config.json  local-example-config.json  prod-config.json  test-config.json
server/src/mcp/: server.py  tools.py
server/src/models/: domain.py
server/src/services/: backtest_service.py  candidate_generator.py  cex_credentials.py  cex_oauth_service.py  cex_service.py  dex_service.py  notification_service.py  oracle.py  order_executor.py  portfolio_risk_service.py  reference_strategies_service.py  scheduler_service.py  strategy_service.py  trade_log.py  wallet_manager.py
server/src/shared/: errors.py  gcp_secret_utils.py  logging.py  timeframes.py
server/tests/: test_mcp.py  test_mcp_auth.py  test_x402.py  test_x402_startup_resilience.py
server/tests/e2e/: test_paper_lifecycle.py  test_smoke.py
server/tests/integration/: test_dex_routes.py  test_discovery_routes.py  test_kb_routes.py  test_mcp_header_auth.py  test_mcp_tools.py  test_passthrough_routes.py  test_scheduler_nonblocking.py  test_sqlite.py  test_strategy_routes.py  test_strategy_service.py  test_wallet_routes.py
server/tests/unit/: test_backtest_service.py  test_candidate_generator.py  test_cex_oauth_service.py  test_cex_service.py  test_clients.py  test_domain.py  (+8 more)
(+97 files in other folders)
