[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app-in-a-box"
version = "0.1.0"
description = "Local Mangrove-powered AI trading agent — FastAPI + MCP + APScheduler"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "fast: Unit tests, no external deps (<0.1s)",
    "slow: DB or network ops (0.1-5s)",
    "integration: Full workflows requiring running services (>5s)",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
